fixed weird ass scrollbar issue

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ p {
 
 #home {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: url(./assets/BG.png) no-repeat center center;
   background-size: cover;
 }
@@ -42,7 +42,7 @@ p {
   flex-direction: column;
   top: 5vh;
   height: 15vh;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   align-items: center;
   padding: 0 7.5vw;
